changed stylings of colors for each article and tweaked margin notes

--- a/article-2/index.html
+++ b/article-2/index.html
@@ -50,8 +50,8 @@
                 Graphic design history is, generally speaking, a history of <span class="stroke">professional practice</span>. In text books, at conferences, and for college courses, design historians and educators explain the development of the industry through the example of pivotal figures, canonical works, and dominant styles. And yet, visual communication is not only a professional domain. It’s an active cultural practice shared by all. What would it look like to expand the scope of history beyond professional boundaries, and what might we <span class="shadow">gain</span> from doing this?
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Key scene</span>
-                Miranda's monologue traces a single shade of blue from haute couture runways to clearance bins — illustrating the full lifecycle of a trend.
+                <span class="mn-label">The core question</span>
+                Visual communication belongs to everyone — not just professionals. Toppins asks what history looks like if we take that seriously.
             </aside>
         </section>
 
@@ -70,8 +70,8 @@
                 To distance the professional from both the layperson and the blue-collar worker, the rhetoric of <span class="geronimo">problem solving</span> proved to be useful. In a 1985 article published in the AIGA Journal of Graphic Design, historian Philip B. Meggs distinguished a designer’s skill from a print laborer: “A layout man was a pair of hands doing what he was told…no one would consider asking him to solve a problem, or even ask him to think about the problem.” In that same article, Meggs made history’s legitimating power plain: “If graphic design is to succeed at casting off the antiquated notion of ‘commercial art’ taking a rightful place beside architecture and painting as a major visual expression of our culture, the ‘history void’ must be overcome.”
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Wild's wheel</span>
-                Intrigue → Mass market → Cliché → Embarrassment → Death → Fetishism → Revival → Curiosity
+                <span class="mn-label">Meggs, 1985</span>
+                "If graphic design is to succeed at casting off 'commercial art'… the 'history void' must be overcome." History as a professional credential.
             </aside>
         </section>
 
@@ -90,8 +90,8 @@
                 This was an effective strategy for elevating graphic design’s cultural cachet. Graphic design is now an <span class="space">in-demand college major</span> and it is more visible in popular media. But since the profession was (and still is) mostly white, upper middle class, and solidly situated within Eurocentric ways of knowing and being, when it comes to role models and value systems, <mark>the formalist graphic design history we inherited doesn’t offer much diversity</mark>. As a result, it delimits our understanding of who made visual communication in the past and what kinds of practices existed beyond the industry’s gaze.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Memphis Group</span>
-                Founded 1981 in Milan. Named after Bob Dylan's "Stuck Inside of Mobile with the Memphis Blues Again."
+                <span class="mn-label">Who got left out</span>
+                A history built to professionalize a mostly white, Eurocentric field will reflect those values — and exclude everything outside them.
             </aside>
         </section>
 
@@ -110,8 +110,8 @@
                 Professional designers have contributed <span class="shimmer">stunning forms and inventive methods</span> to the field, but there is also <mark>so much catalytic design that was not made by professionals</mark>. BIPOC Design History, an online curriculum produced by educators Pierre Bowins, Tasheka Arceneaux-Sutton, and Silas Munro, offers many examples of anonymous, amateur, or otherwise non-canonical design that had a significant cultural impact. Some of these examples, while ignored in their time, have since been acknowledged by the AIGA. Emory Douglas, whose work was discussed by Colette Gaiter in a lesson on protest graphics, became a medalist in 2015. Gaiter also discussed the iconic “I AM A MAN” placard used during the 1968 Memphis Sanitation Workers strike. I have also written about the placard in the AIGA Design Educators Community series “Beyond the Bauhaus,” where others have written about practices like AfriCOBRA and the Gees Bend Quilters. These examples show how everyday people used design to respond to their social lives—and yes, this included solving problems.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">From high to low</span>
-                Bowie and Lagerfeld's apartments → Saved by the Bell → airport gift shop mugs.
+                <span class="mn-label">BIPOC Design History</span>
+                Emory Douglas, the "I AM A MAN" placard, AfriCOBRA, the Gees Bend Quilters — significant design made entirely outside the professional canon.
             </aside>
         </section>
 
@@ -140,8 +140,8 @@
                 Another challenge to opening up the scope of history beyond the profession is the potential for graphic design history to exploit diverse cultural practices by subsuming them under the logic of capitalism, the fount from which design professions spring. To borrow a phrase from theorist McKenzie Wark: <mark>there is culture and then there is the culture industry</mark>. Graphic designers practice in the latter but want to be taken seriously in the former. If by broadening history, the intent is to be inclusive, but the impact is only to co-opt vernacular graphics, uncanonized works, or overlooked global practices for commodity culture, then we haven’t done much to transform graphic design or its history. 
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Constructivism</span>
-                1910s–1930s. Art in service of the Soviet state — simplified forms, primary colors, universal language.
+                <span class="mn-label">Culture vs. industry</span>
+                McKenzie Wark's distinction: there is culture, and then there is the culture industry. Designers work in the latter but want credit in the former.
             </aside>
         </section>
 
@@ -160,8 +160,8 @@
                 Everyone designs and design is crucial to the future. Design philosophers Anne-Marie Willis and Tony Fry discuss these matters in their scholarly writing. They see design as <span class="shimmer">ontological</span>, a definition also used by decolonial scholar Arturo Escobar in Designs for the Pluriverse. Ontology, put simply, is the philosophical study of being and existence. To name design as ontological suggests that design has being and acts toward the world. This imbues design with relational and performative potential independent of a designer’s intent. If graphic design were historicized as a kind of cultural activity with determining agency, rather than the output of important professionals, then professionally made design becomes one kind of design in history, not the criterion for inclusion and not the limit of possibility. In Meggs’ time, such an “ontological approach” to design history might have threatened the goal of achieving professionalization. Today, <mark>the historicizing of graphic design as collective, adaptive practices</mark> may be the transition needed to understand what graphic design will be in the future.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Saks "Want It"</span>
-                Studio Number One appropriated Constructivist aesthetics for luxury retail during the 2008 recession.
+                <span class="mn-label">Design as ontological</span>
+                Willis, Fry, and Escobar: design isn't just output — it has agency, shapes existence. Professionalizing it was always only one possible story.
             </aside>
         </section>
 
