--- a/article-3/index.html
+++ b/article-3/index.html
@@ -49,8 +49,8 @@
                 Let’s engage in a <span class="stroke">thought experiment</span>. Think about what you know about graphic design history. Then omit all mention of design heroes. Try for a moment not to think about the objects of design. Consider instead the kinds of social forces that surround design as a practice: <span class="slant">labor</span>, <span class="slant2">technology</span>, or <span class="slant">politics</span>, for example.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Key scene</span>
-                Miranda's monologue traces a single shade of blue from haute couture runways to clearance bins — illustrating the full lifecycle of a trend.
+                <span class="mn-label">The experiment</span>
+                Toppins asks readers to strip away names and objects — and think in forces: labor, technology, politics. What's left when you remove the heroes?
             </aside>
         </section>
 
@@ -69,8 +69,8 @@
                 Cultures clashing. Pistons pumping. Bombs dropping. What might it mean to respond to this as a designer? These are some of the conditions that lead to modernism and its utopian goal of bringing order to chaos.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Wild's wheel</span>
-                Intrigue → Mass market → Cliché → Embarrassment → Death → Fetishism → Revival → Curiosity
+                <span class="mn-label">Modernism's roots</span>
+                Industrialization, mass migration, two World Wars — these are the real origin story of modernist design, not any single designer's genius.
             </aside>
         </section>
 
@@ -89,8 +89,8 @@
                 Since the 1980s, when graphic design history was still considered “a movement,” it has been common to teach the subject as a <span class="shimmer">progression of styles</span> with objects made by heroically talented people. This promotes connoisseurship, but it does not explain the underlying causes of design or how it related to its audiences. Graphic design emerges from <span class="slant2">social</span>, <span class="slant">technological</span>, <span class="slant2">economic</span>, and <span class="slant">political</span> contexts. It’s important for those who study its history to connect design and designers to these contexts first and foremost.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Memphis Group</span>
-                Founded 1981 in Milan. Named after Bob Dylan's "Stuck Inside of Mobile with the Memphis Blues Again."
+                <span class="mn-label">Since the 1980s</span>
+                Graphic design history began as a movement to legitimize the profession — which meant building a canon of great men and great objects, not great contexts.
             </aside>
         </section>
 
@@ -109,8 +109,8 @@
                 In a 2009 article for Design and Culture, Johanna Drucker compared Phillip Meggs’ groundbreaking <em>A History of Graphic Design (1983)</em> to Richard Hollis’ <em>Graphic Design: A Concise History (1994)</em>. These two books were instrumental in establishing the graphic design canon, and are still widely used in courses in Europe and the United States. Drucker offered a respectful and thorough critique, observing that in Meggs’ history, design objects are the result of a designer’s special genius rather than cultural influences or economic pressures. In Hollis’s model, pioneers still instigate change, but this happens within <mark>“social circumstances and cultural functions.”</mark>
             </p>
             <aside class="margin-note">
-                <span class="mn-label">From high to low</span>
-                Bowie and Lagerfeld's apartments → Saved by the Bell → airport gift shop mugs.
+                <span class="mn-label">Meggs vs. Hollis</span>
+                Meggs: genius creates design. Hollis: social circumstance creates design. Two canonic books, two very different theories of history.
             </aside>
         </section>
 
@@ -139,8 +139,8 @@
                 The graphic design industry shrouds itself in capitalist rhetoric which <span class="shimmer">privileges individual achievement</span> over social phenomena. It follows then that graphic design history, which is traditionally a discourse of capitalism, would emphasize individual achievements too. But nothing about this is natural. It is a historiographical conceit.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Constructivism</span>
-                1910s–1930s. Art in service of the Soviet state — simplified forms, primary colors, universal language.
+                <span class="mn-label">Capitalist rhetoric</span>
+                Individual achievement is the story capitalism tells about itself. Design history absorbed that story — but it was never the only story available.
             </aside>
         </section>
 
@@ -159,8 +159,8 @@
                 Graphic design, by focusing on its own version of monarchs and dynasties, maintains an <span class="stroke">outdated approach to history</span> that further entrenches it as a hierarchical society. What present-day designers need to know about the past is not, for example, that Jan Tschichold made trailblazing book covers for Penguin. It’s more important to understand that Tschichold was one of many designers who responded to his social milieu by developing systems for standardization. <mark>The book covers are not self-evident objects. They exemplify an idea that emerged from a social condition.</mark> By reflecting on context first and formal qualities second, students of history might recognize that <span class="shimmer">design is in dialogue with culture</span>. They might even see in the modernist drive to standardize a parallel with today’s UX/UI professions. The past is in the present.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Saks "Want It"</span>
-                Studio Number One appropriated Constructivist aesthetics for luxury retail during the 2008 recession.
+                <span class="mn-label">Tschichold reframed</span>
+                Jan Tschichold's Penguin covers matter less as masterworks and more as evidence: one designer responding to a cultural drive toward standardization.
             </aside>
         </section>
 
@@ -179,8 +179,8 @@
                 Davis’ text is an exemplary social history of design. <mark>In it no artifact or practitioner operates outside of the world.</mark> The Dada technique of photomontage is grounded in politics. The modernist dream of universal communication emerges from war-torn societies. The postmodern fascination with vernacular graphics is problematized in consideration of design’s class privilege. Davis’ reader is not asked to admire charming forms, but to recognize the ways design comports with cultural flux, even as it contradicts its own rhetoric.
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Thesis</span>
-                History doesn't repeat, but style cycles do. Knowing the cycle is a prerequisite for innovation.
+                <span class="mn-label">Davis' method</span>
+                Start with a child cotton mill worker, 1908. Only then introduce modernism. Davis grounds design in human cost before aesthetic form.
             </aside>
         </section>
 
@@ -191,8 +191,8 @@
                 Davis did not fully omit designers. Designers and design objects are secondary, even tertiary, to ideas that manifest from affective forces. It is true that certain people influenced design a great deal. But in Davis’ text, even these pivotal figures result from cultural conditions. 
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Thesis</span>
-                History doesn't repeat, but style cycles do. Knowing the cycle is a prerequisite for innovation.
+                <span class="mn-label">Context first</span>
+                Even pivotal designers, in Davis' framing, are products of their era — not exceptions to it.
             </aside>
         </section>
 
@@ -204,8 +204,8 @@
                 In his essay “Changing Attitudes to Graphic Design History,” Adrian Shaughnessy observed that emerging designers seem disenchanted with the contemporary field while taking solace in history. He argued that “as the future becomes more and more dominated by digital platforms, strategies and methodologies, the reality for many thousands of graphic designers is that their role is <span class="space">increasingly marginalized</span>.” Shaughnessy noted that design is often produced using templates, developed under supervision in collaborative teams, and controlled by strategists. “But to eyes disenchanted with the world of digital creativity,” he wrote, “graphic design’s past is being viewed afresh from the idealistic yearning of a return to the designer as individual creator.” 
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Thesis</span>
-                History doesn't repeat, but style cycles do. Knowing the cycle is a prerequisite for innovation.
+                <span class="mn-label">Shaughnessy's paradox</span>
+                Designers disenchanted by digital templates turn nostalgically to the lone-genius past — the very myth that history should be dismantling.
             </aside>
         </section>
 
@@ -217,8 +217,8 @@
                 And yet, before the computer, designers relied on analogous trades to realize their plans. They worked with typesetters and printers, for example, to produce a single artifact. <mark>Design has always been controlled by outside conditions; labor has always been collaborative.</mark> Many prominent designers, even if gifted leaders, were supported by teams who created value for their businesses. Individual creators are, to no small extent, <span class="stroke">historical fabrications</span>. Let’s suspend the cult of hero worship in order to reflect on this myth. 
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Thesis</span>
-                History doesn't repeat, but style cycles do. Knowing the cycle is a prerequisite for innovation.
+                <span class="mn-label">Always collaborative</span>
+                Even pre-digital, designers depended on typesetters, printers, and teams. The solitary genius was always a fiction.
             </aside>
         </section>
 
@@ -229,8 +229,8 @@
                 The nostalgia observed by Shaughnessy should inspire designers to examine their relationship to the past as it is mediated by history. Design heroes are <span class="shimmer">mythical</span>—we imagined them, and we can unimagine them. As a field, we should stop perpetuating the idea that designers are singular change-agents who act on culture from outside of it. Rather, we should make visible the complex social worlds in which designers practice. 
             </p>
             <aside class="margin-note">
-                <span class="mn-label">Thesis</span>
-                History doesn't repeat, but style cycles do. Knowing the cycle is a prerequisite for innovation.
+                <span class="mn-label">Unimagining heroes</span>
+                We invented the design hero — so we can uninvent them. History is not fixed; it reflects what the present chooses to need from the past.
             </aside>
         </section>
 
